Handle VCS errors when VCSJob is unsuccessful

Main problem descibed in bug report was the case when the name and email
of author is not defined using git config --global. Due to this several
operations like init via 'new from template' option or just simple
commit failed without reporting error.

Changes:
* Set proper errorText for vcs jobs
* New slot jobFinished in vcsdiffpatchsources
* Shows detailed failure information through vcsError function when initialization fails.
* Checks  the status of commit job, if unsuccessful shows a error KMessageBox.
* Several whitespace fixes slipped in shamelessly by vim

BUG: 327931
REVIEW: 116530
FIXED-IN: 1.6.1